# bic_social_api

./: .env.example  Cargo.toml  Dockerfile  Dockerfile.mocks  LICENSE  README.md  docker-compose.yml  test_curls.sh
.cargo/: config.toml
.github/workflows/: default.yml
.sqlx/: query-044d5a02bb9d978ba71496bfa37ed1152fbe5159374491c7804861407a444a46.json  query-469ee0c7b016f9df0d1ae1ab3ea655f72f449bec4ffacceb62a0d4349a3a4bd1.json  query-5b7c1ba5006e4da13d78600fcf43e796a97996ee3a78aa6d466364ded1479a53.json  query-6afe42e50a91e21a88da41911cea123ea544ce5578b23071d59fc62c9bdaae7c.json  query-7113b14ad093272f839af6d8dbabdfe89fbaed98fee6e0687ea8b7a3763b9f0b.json  query-7c45000bd59d2a994cdd5cb44c8fcf03bd0a45bab72a27c474ad6d8ce78c97eb.json  query-7e25679603b3b4faedfe21a036dadca352a9fe8899b17d23252df7a7b9c61986.json  query-8a535cb856ba004fcdb79d6254bc6c5a910f2d4e63f38f5c2d019dec9308c3a7.json  query-cd9446aa14c40c7c32848d17e08b3cfc7ecb859f3bded20bb55928aecce926e2.json  query-cdcd68c56a62d39b35578c10b3744cd2cabf0e8d614f7da13dd821a1e2adcd41.json  query-dee9815fa124217f42891080f808938130f013b5ce3dd4bd16332fd69bd7cdd3.json  query-f28d34b9969969e1491d0d4877e7eb51d58cbce6c4ef2c0f3913d17bc6562da5.json  query-f2a85aebef34dca237272f91f045c499799dc5198399a5d6d9b7f8e4e09f655c.json  query-f6c7a41220f7f8727cd9da583abe9cac45a14ac4b6c83b5024c0bd4a3c999130.json
migrations/: 20260319022923_init.sql
src/: config.rs  like_service.rs  main.rs  server_utils.rs
src/clients/: circuit_breaker.rs  content.rs  error.rs  mod.rs  profile.rs
src/config/: app.rs  mod.rs  registry.rs
src/http/: mod.rs  (+2 more)
(+23 files in other folders)
