[package]
name = "bic_social_api"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = { "version" = "0.8.8", features = ["macros"] }
base64 = "0.22.1"
chrono = "0.4.44"
config = "0.15.22"
deadpool-redis = "0.23.0"
dotenvy = "0.15.7"
prometheus = "0.14.0"
redis = "1.0.5"
reqwest = { version = "0.13.2", features = ["json"] }
reqwest-middleware = { version = "0.5.1", features = ["json"] }
reqwest-retry = "0.9.1"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "chrono",
  "uuid",
] }
thiserror = "2.0.18"
# TODO: replace full with necessary features only
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }
